General work on thesis

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -32,15 +32,25 @@ knitr::opts_chunk$set(
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
 This thesis is about applied and methodological Bayesian statistics.
-The focus is on questions motivated by surveillance of HIV in sub-Saharan Africa.
-The data are related to people, located in space and time.
-Tackling substantive applied questions has been a productive strategy for the statistical science discipline. 
-As such, it is my hope that the work contained within will also be of interest more broadly.
+It is Bayesian in the sense that I use probability models to draw conclusions from data.
+It is applied and methodological in the sense that I am concerned with real world questions and the means to answer them.
+
+The real world questions relate to surveillance of HIV in sub-Saharan Africa.
+Though important progress has been made, over forty years since the first reported cases millions of people remain impacted by HIV each year.
+Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination. 
+
+The data in this thesis are related to people.
+Usually, people answering survey questions or using healthcare facilities.
+Because the data have positions in space and time, statisticians describe it as spatio-temporal [@cressie2015statistics].
+While there is a great diversity of spatio-temporal data, there are important and distinctive commonalities which make their shared study worthwhile.
+
+Computation is an essential part of modern statistical practice.
+Each project chapter is accompanied by computer code, hosted on GitHub.
 
 ## Chapter overview
 
-* Chapter \@ref(background): I review the required background for the rest of the thesis.
-* Chapter \@ref(beyond-borders): I raise concerns with the prevailing model for spatial structure used in small-area estimation, and evaluate whether these concerns have practical consequences [@howes2023beyond].
-* Chapter \@ref(multi-agyw): I estimate the size of HIV risk groups for adolescent girls and young women across 13 countries in sub-Saharan Africa [@howes2023spatio].
-* Chapter \@ref(naomi-aghq): I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis, and apply it to the Naomi small-area estimation model in Malawi [@howes2023fast].
-* Chapter \@ref(conclusions): I discuss avenues for future work, and my conclusions regarding the PhD research.
+* Chapter \@ref(background): I start by reviewing the required background for the rest of the thesis. This background concerns the HIV/AIDS epidemic and Bayesian spatio-temporal statistics.
+* Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed for analysis of a grid of pixels. The districts of a country are not a grid. I evaluate the practical consequences of this this concern [@howes2023beyond].
+* Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection. The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections. I estimate the size of behavioural risk groups across priority countries to enable implementation of the strategy, and assess the potential benefits [@howes2023spatio].
+* Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used across countries to estimate HIV indicators. I develop an approximate Bayesian inference method, designed with Naomi in mind, which combines adaptive Gauss-Hermite quadrature with principal components analysis, and apply it to data in Malawi [@howes2023fast].
+* Chapter \@ref(conclusions): I discuss avenues for future work, and my conclusions regarding the research.
