--- a/04-multi-agyw.Rmd
+++ b/04-multi-agyw.Rmd
@@ -20,19 +20,20 @@ bibliography: references.bib
 In this chapter I describe an application of Bayesian spatio-temporal statistics to small-area estimation of HIV risk group proportions.
 This work was done in collaboration with colleagues from the MRC Centre for Global Infectious Disease Analysis and UNAIDS.
 My primary role was to develop the statistical model, building upon an earlier version of the analysis conducted by Kathryn Risher.
-The results are described in @howes2023spatio, and are beginning to be used by countries to guide policy via a spreadsheet tool created by Kathryn.
+The results are described in @howes2023spatio.
+Kathryn has created a spreadsheet tool which is beginning to be used by countries to guide policy.
 Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw) and supported by the R package [`multi.utils`](https://athowes.github.io/multi.utils).
 
 ## Background
 
 Risk of acquiring HIV infection is not equal for all individuals.
-Moreover, variation in risk is systematic across to demographic characteristics.
-Adolescent girls and young women (AGYW) -- that is, females aged 15-29 -- are one demographic group at particular risk.
+Moreover, variation in risk is systematic across demographic characteristics.
+Adolescent girls and young women (AGYW) -- that is, females aged 15-29 -- are one such demographic group at particular risk.
 
 The Global AIDS Strategy 2021-2026 proposed stratifying HIV prevention packages to AGYW based on local population-level HIV incidence and individual-level sexual risk behaviour.
 The idea is that prioritisation based on both of these factors is more efficient than on only or one the other.
 
-```{r risk-grid, out.width = "90%", echo=FALSE, fig.cap="Risk grid."}
+```{r risk-grid, fig.cap="Risk grid."}
 knitr::include_graphics("figures/extra/risk-grid.png")
 ```
 
