--- a/05-naomi-aghq.Rmd
+++ b/05-naomi-aghq.Rmd
@@ -12,10 +12,15 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Fast approximate deterministic Bayesian inference {#naomi-aghq}
+# Fast approximate Bayesian inference {#naomi-aghq}
 \adjustmtc
 \markboth{Fast, approximate inference for the Naomi model}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
+
+In this chapter I describe a novel Bayesian inference method I developed with the aim of facilitating fast and accurate inference for the Naomi small-area estimation model.
+This work builds on that of others, including @rue2009approximate, @kristensen2016tmb and @stringer2021fast.
+I began working on this project in 2020, but did not make significant progress until I read Alex Stringer's work.
+We later began collaborating, including Alex supervising my visit to the University of Waterloo in 2022.
 
 Code for the analysis in this chapter is available from [`athowes/naomi-aghq`](https://github.com/athowes/elgm-inf) and supported by the R package [`inf.utils`](https://athowes.github.io/inf.utils).
 Include an edited version of the corresponding paper here.
