--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Thesis corrections for "Methods and applications of Bayesian spatio-temporal statistics for prioritised HIV prevention"
+title: Thesis corrections for "Methods and applications of Bayesian spatio-temporal statistics for HIV surveillance"
 subtitle: |
   Adam Howes (`ath19@ic.ac.uk`)
 output:
@@ -17,15 +17,23 @@ output:
 
 ## Minor corrections {-}
 
-> *Spelling mistake*
+> *1. Spelling mistake*
 
-I've fixed it!
+1. I've fixed it!
+
+> *2. Spelling mistake*
+
+2. I've fixed it!
 
 ## Major corrections {-}
 
-> *Methods mistake*
+> *3. Methods mistake*
 
-Hopefully I've fixed it!
+3. Hopefully I've fixed it!
+
+> *4. Methods mistake*
+
+4. Hopefully I've fixed it!
 
 \newpage
 
@@ -33,15 +41,23 @@ Hopefully I've fixed it!
 
 ## Minor corrections {-}
 
-> *Spelling mistake*
+> *1. Spelling mistake*
 
-I've fixed it!
+1. I've fixed it!
+
+> *2. Spelling mistake*
+
+2. I've fixed it!
 
 ## Major corrections {-}
 
-> *Methods mistake*
+> *3. Methods mistake*
 
-Hopefully I've fixed it!
+3. Hopefully I've fixed it!
+
+> *4. Methods mistake*
+
+4. Hopefully I've fixed it!
 
 \newpage
 
