--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -5,6 +5,8 @@
 %  arrange(Term) %>%
 %  kable(booktab = TRUE, escape = FALSE, "latex")
 
+% After writing, reorder these as they appear in the text
+
 % First parameter can be changed eg to "Glossary" or something.
 % Second parameter is the max length of bold terms.
 \begin{mclistof}{List of Abbreviations}{3.2cm}
@@ -30,5 +32,7 @@
 \item[SAE] Small Area Estimation.
 \item[GMRF] Gaussian Markov Random Field.
 \item[HMC] Hamiltonian Monte Carlo.
+\item[PrEP] Pre-Exposure Prophylaxis
+\item[PEP] Post-Exposure Prophylaxis
 
 \end{mclistof} 
