--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@
 ## thesis metadata ##
 #####################
 title: |
-  Methods and applications of Bayesian spatio-temporal statistics for prioritised HIV prevention
+  Methods and applications of Bayesian spatio-temporal statistics for HIV surveillance
 author: Adam Howes
 college: Department of Mathematics
 university: |
