--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,10 @@
+@book{porter2020rise,
+  title={The rise of statistical thinking, 1820--1900},
+  author={Porter, Theodore M},
+  year={2020},
+  publisher={Princeton University Press}
+}
+
 @article{rue2009approximate,
   title={{Approximate Bayesian inference for latent Gaussian models by using integrated nested Laplace approximations}},
   author={Rue, H{\aa}vard and Martino, Sara and Chopin, Nicolas},
@@ -557,4 +564,19 @@ URL= {https://www.r-inla.org/faq},
   author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki and Rubin, Donald B},
   year={2013},
   publisher={CRC press}
+}
+
+@book{cressie2015statistics,
+  title={Statistics for spatio-temporal data},
+  author={Cressie, Noel and Wikle, Christopher K},
+  year={2015},
+  publisher={John Wiley \& Sons}
+}
+
+@misc{unaids2021global,
+  title={Global AIDS Update 2021},
+  author={{UNAIDS}},
+  year={2021},
+  howpublished={\url{https://www.unaids.org/en/resources/documents/2021/global-aids-update}},
+  note={Accessed: June 2023}
 }
